--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/archiver": "^6.0.2",
     "@types/multer": "^1.4.11",
     "archiver": "^7.0.1",
+    "basic-auth": "^2.0.1",
     "nestjs-minio-client": "^2.2.0",
     "pg": "^8.11.5",
     "prisma": "^5.12.1",
@@ -39,6 +40,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/basic-auth": "^1.1.8",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
