--- a/.env
+++ b/.env
@@ -1,13 +1,17 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 POSTGRES_HOST="localhost"
+# POSTGRES_HOST="postgres"
 POSTGRES_USER="postgres"
-POSTGRES_PASS="root"
+POSTGRES_PASS="postgres"
 POSTGRES_DB="povisual"
 POSTGRES_PORT=5432
 
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASS}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
+
+API_PORT=4200
+API_VERSION="1"
+API_PREFIX="api"
+SWAGGER_TITLE="Sixth Sense API"
+SWAGGER_DESCRIPTION="Api Sense"
+SWAGGER_PATH="docs"
+
+API_PASSWORD="HG@765J_VDJsavdbh&Hf78686_58dsKFJbSHfd6_75656sKJV#$FJf8dsBJ_fds%VFD"
