--- a/.env
+++ b/.env
@@ -15,3 +15,5 @@ SWAGGER_DESCRIPTION="Api Sense"
 SWAGGER_PATH="docs"
 
 API_PASSWORD="HG@765J_VDJsavdbh&Hf78686_58dsKFJbSHfd6_75656sKJV#$FJf8dsBJ_fds%VFD"
+
+JWT_SECRET="HG@765J_VDJsavdbh&Hf78"
