--- a/package.json
+++ b/package.json
@@ -23,18 +23,24 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.12.1",
     "@types/archiver": "^6.0.2",
     "@types/multer": "^1.4.11",
+    "@types/passport-jwt": "^4.0.1",
     "archiver": "^7.0.1",
+    "argon2": "^0.41.1",
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express-basic-auth": "^1.2.1",
     "nestjs-minio-client": "^2.2.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
     "prisma": "^5.12.1",
     "reflect-metadata": "^0.2.0",
@@ -88,7 +94,8 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/utils(|/.*)$": "<rootDir>/libs/utils/src/$1"
+      "^@app/utils(|/.*)$": "<rootDir>/libs/utils/src/$1",
+      "^@app/assets(|/.*)$": "<rootDir>/libs/assets/src/$1"
     }
   },
   "resolutions": {
