--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,13 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "paths": {}
+    "paths": {
+      "@app/assets": [
+        "libs/assets/src"
+      ],
+      "@app/assets/*": [
+        "libs/assets/src/*"
+      ]
+    }
   }
 }
